RIBT button focus changes

--- a/src/assets/css/General.css
+++ b/src/assets/css/General.css
@@ -661,7 +661,7 @@ ol {
 .login-btn:hover,
 .login-btn:focus {
     color: #fff;
-    background: #1096d0;
+    background: #fed136;
     border-color: #ffffff;
 }
 
